--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
     }
    ],
    "source": [
-    "str =\"art vandelay\" # 'Art Vandelay'"
+    "str = \"art vandelay\" # 'Art Vandelay'\n",
+    "str"
    ]
   },
   {
