--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +158,14 @@
        "<function str.title>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "str = \"art vandelay\" # 'Art Vandelay'\n",
-    "str"
+    "str.title"
    ]
   },
   {
